# robt403_lab

./: README.md  launch_multiple.sh  launch_packages.sh  launch_single.sh
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/animate/: animation.py  single_anim.py
devel/lib/control_snake/: move  sine_wave  step_response
devel/lib/controller/: joint_controller_node  sine_wave_publisher_node  snake_node  square_wave_publisher_node
devel/lib/lab4/: rectangle  test_moveit  test_node  x_move
devel/lib/move/: moveit_motor_state
devel/lib/my_package/: id_publisher  listener  talker
devel/lib/pkgconfig/: animate.pc  beginner_tutorials.pc  control_snake.pc  controller.pc  dynamixel_controllers.pc  dynamixel_driver.pc  dynamixel_msgs.pc  dynamixel_tutorials.pc  gazebo_robot.pc  lab4.pc  lab4_control.pc  lab4_moveit.pc  move.pc  moveit_aidana.pc  moveit_arm.pc  moveit_dimash.pc  my_dynamixel_tutorial.pc  my_package.pc  pgm_map_creator.pc  robot_control.pc  robot_description.pc  traj_planning.pc  turtlebot_controller.pc
devel/lib/traj_planning/: multiple_via.py  test.py
devel/lib/turtlebot_controller/: turtle_listener
src/animate/: CMakeLists.txt
src/animate/src/: multiple_anim.py
src/beginner_tutorials/: package.xml
src/control_snake/: CMakeLists.txt
src/control_snake/src/: move.cpp  sine_wave.cpp  snake.cpp  step_response.cpp  step_response.launch
src/lab4/: CMakeLists.txt
src/lab4/src/: rectangle.cpp  test.cpp  x_move.cpp
src/lab4_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/lab4_moveit/config/: controllers_real.yaml  fake_controllers.yaml  hand_tutorial.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/lab4_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hand_tutorial_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  warehouse.launch  (+3 more)
src/my_package/: CMakeLists.txt
src/my_package/src/: id_publisher.cpp  id_subscriber.cpp
src/traj_planning/: CMakeLists.txt
src/traj_planning/src/: execution.py  multiple_via.py  single_pose.py
src/turtlebot_controller/: CMakeLists.txt
src/turtlebot_controller/src/: exercise5_square.cpp  exercise5_triangle.cpp  subscriber.cpp  turtle_listener.cpp
(+32 files in other folders)
